# mini-rv32ima

./: .gitignore
baremetal/: Makefile
hello_linux/: hello_linux.S  hello_linux.gdb
mini-rv32ima/: bintoh.c
myrun/: CMakeLists.txt  Makefile
myrun/bintoh++/: CMakeLists.txt  main.cpp
myrun/rv32ima/: CMakeLists.txt  mini-rv32ima.c
